Changed column layout to start at the half-gutter boundary instead. Started modifying index.html. Starting hacking on .htaccess to get all the rewrites working with the new scheme.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Basehold.it - quick, painless, javascript-free baseline overlays</title>
+	<title>Gridhold.it - quick, painless, javascript-free column grid overlays</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0,user-scalable=no,width=device-width">
-	<link rel="stylesheet" href="http://basehold.it/24">
+	<link rel="stylesheet" href="http://localhost:180/60/20/12">
 	<link rel="stylesheet" href="s.css">
 </head>
 <body>
-	<h1>Basehold.it</h1>
-	<h2 class="tagline">A quick, painless, javascript-free baseline overlay.</h2>
+	<h1>Gridhold.it</h1>
+	<h2 class="tagline">A quick, painless, javascript-free column grid overlay.</h2>
 	<p>Baseline grids are super helpful for web designers, allowing us to maintain vertical rhythm on our designs. But short of a few Javascript bookmarklets, there isn't really a simple way to get a baseline grid overlay on our designs. Enter <strong>Basehold.it</strong></p>
 	<p>Using Basehold.it couldn't be easier. Simply add it like any other stylesheet:</p>
 	<p><code>&lt;link rel="stylesheet" href="http://basehold.it/24"></code></p>
@@ -27,7 +27,7 @@
     background-image: url(http://basehold.it/i/24/255/0/0/0.85); // with RGBA colour
 }</code></p>
 	<footer role="contentinfo">
-		<p>Another thing by <a href="http://twitter.com/_dte">Dan Eden</a> &amp; <a href="http://twitter.com/michaelw90">Michael Wright.</a></p>
+	  <p>By <a href="http://twitter.com/_dte">Dan Eden</a>, <a href="http://twitter.com/michaelw90">Michael Wright</a>, and <a href="http://twitter.com/eikimart">Eiki Martinson</a>.</p>
 	</footer>
 </body>
 </html>
